--- a/report/output.tex
+++ b/report/output.tex
@@ -7,6 +7,8 @@
 
 \begin{document}
 \maketitle
+基本的な確率モデルである隠れマルコフモデルおよびこのモデルを計算する原始的なアルゴリズムであるViterbiのアルゴリズムについて実装する.
+
 \section{実験1}
 
 \end{document}
