--- a/report/output.tex
+++ b/report/output.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper]{jarticle}
 \usepackage[dvipdfmx]{graphicx, color}
+\usepackage{listings}
 
 \title{MI/CS実験 隠れマルコフモデル}
 \author{I CS 1411191 八木卓海}
@@ -10,5 +11,13 @@
 基本的な確率モデルである隠れマルコフモデルおよびこのモデルを計算する原始的なアルゴリズムであるViterbiのアルゴリズムについて実装する.
 
 \section{実験1}
+
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=main.py]
+a
+\end{lstlisting}
+
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=bg.pyx]
+b
+\end{lstlisting}
 
 \end{document}
