--- a/report/output.tex
+++ b/report/output.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{jarticle}
 \usepackage[dvipdfmx]{graphicx, color}
-\usepackage{listings}
+%\usepackage{listings}
 
 \title{MI/CS実験 隠れマルコフモデル}
 \author{I CS 1411191 八木卓海}
@@ -8,16 +8,28 @@
 
 \begin{document}
 \maketitle
-基本的な確率モデルである隠れマルコフモデルおよびこのモデルを計算する原始的なアルゴリズムであるViterbiのアルゴリズムについて実装する.
-
-\section{実験1}
-
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=main.py]
-a
-\end{lstlisting}
-
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=bg.pyx]
-b
-\end{lstlisting}
+基本的な確率モデルである隠れマルコフモデルおよびこのモデルを計算する原始的なアルゴリズムであるViterbiのアルゴリズムについて実装した. ソースコードはレポート最後に添付した.
+\section{課題1}
+\section{課題2}
+\section{課題3}
+\section{課題4}
+\section{考察}
+\section{ソースコード}
+%\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=main.py]
+%a
+%\end{lstlisting}
+%
+%\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=bg.pyx]
+%b
+%\end{lstlisting}
+%\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=dice1.txt]
+%b
+%\end{lstlisting}
+%\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=dice2.txt]
+%b
+%\end{lstlisting}
+%\begin{lstlisting}[basicstyle=\ttfamily\footnotesize, frame=single, caption=sevenstates.txt]
+%b
+%\end{lstlisting}
 
 \end{document}
